Refactoring to add a bit of history to the conversation